# redeval

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
recipes/attack/: base-close.yml  base-open.yml  eval.yml  human_jailbreak.yml  methods.yml
recipes/refuse/: base-close.yml  base-open.yml  eval.yml
redeval/: cli.py  config.py  eval_attack.py  eval_refuse.py  exceptions.py  generate_attack.py  pipeline.py  run_attack.py  run_refuse.py  score.py  switcher.py  utils.py
redeval/attack/: __init__.py  base.py  respond.py
redeval/attack/direct/: __init__.py  direct.py
redeval/attack/human_jailbreaks/: human_jailbreaks.py
redeval/attack/pair/: pair.py
redeval/attack/zeroshot/: __init__.py  zeroshot.py
redeval/configs/: __init__.py  attack.py  base.py  eval.py  refuse.py
redeval/evaluator/: __init__.py  base.py  prompts.py
redeval/llms/: __init__.py  base.py  openai.py  vllm.py
redeval/refuse/: base.py  simple.py
sh/: eval_attack.sh  eval_refuse.sh  generate_attack.sh  run_attack.sh  run_refuse.sh  score.sh  setup_env.sh
